fixed logo and shopping cart alignment

--- a/src/components/Nav/Nav.css
+++ b/src/components/Nav/Nav.css
@@ -82,6 +82,8 @@
     align-items: center;
     width: 100%;
     padding-top: 15px;
+    position: absolute;
+    top: 1.5%;
     right: 30px;
     cursor: pointer;
   }
