--- a/src/components/OrderOnline/OrderOnline.css
+++ b/src/components/OrderOnline/OrderOnline.css
@@ -60,7 +60,9 @@
     gap: 2rem;
     padding-left: 1.5rem;
   }
+}
 
+@media (max-width: 980px) {
   .cart {
     display: block;
     cursor: pointer;
